--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.0",
+    "@types/node": "^12.0.8",
     "nodemon": "^1.19.1",
     "ts-node": "^8.2.0",
-    "typescript": "^3.5.1",
-    "@types/express": "^4.17.0"
+    "typescript": "^3.5.1"
   }
 }
