--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sequelize": "^5.8.9",
+    "sqlite": "^3.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
